FULL-STUDY/ingress/dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foringres-test
  namespace: for-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-pod-label
  template:
    metadata:
      labels:
        app: nginx-pod-label
    spec:
      containers:
        - name: nginx
          image: nginx:1.26.0
