FULL-STUDY/ingress/svc-cluster.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
  namespace: for-ingress
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
