FULL-STUDY/ingress/svc-dep.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: for-ingress
spec:
  type: NodePort
  selector:
    app: nginx
  prots:
    - protocol: TCP
      port: 80
      targetPort: 80
